--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <li><a href="/index.html#about" class="nav-link">About Me</a></li>
                 <li><a href="/index.html#edu" class="nav-link">Education</a></li>
                 <li><a href="/index.html#exp" class="nav-link">Experience</a></li>
-                <li><a href="/index.html#skills" class="nav-link">Skills</a></li>
                 <li><a href="/index.html#proj" class="nav-link">Projects</a></li>
+                <li><a href="/index.html#skills" class="nav-link">Skills</a></li>
                 <li><a href="/contact.html" class="nav-link">Contact</a></li>
             </ul>
             <ul class="navigation2">
@@ -32,6 +32,7 @@
     </header>
 
     <main>
+        <!--About Me-->
         <section class="aboutme-flex" id="about">
             <img src="/images/portrait.jpg" alt="Jay Shinde, Portrait" class="aboutme-portrait">
             <div class="aboutme-text-flex f">
@@ -56,6 +57,7 @@
             </div>
         </section>
 
+        <!--Education-->
         <section class="edu-flex tag f" id="edu">
             <h2>Education</h2>
             <div class="edu-ucsd-flex f2">
@@ -74,8 +76,10 @@
             </div>
         </section>
 
+        <!--Experience-->
         <section class="exp-flex tag f" id="exp">
             <h2>Experience</h2>
+            <!--VerityStream-->
             <div class="exp-institution-flex f2">
                 <h3 style="min-width: 250px;"><b>VerityStream</b><br><i style="font-size: .8em;"><br>San Diego, CA<br>June 2021 - November 2021</i></h3>
                 <div class="exp-institution-info-flex f2">
@@ -94,6 +98,7 @@
                 </a>
             </div>
 
+            <!--Nestle-->
             <div class="exp-institution-flex f2">
                 <h3 style="min-width: 250px;"><b>Nestle Toll House</b><br><i style="font-size: .8em;"><br>Eastvale, CA<br>October 2017 - August 2018</i></h3>
                 <div class="exp-institution-info-flex f2">
@@ -106,6 +111,7 @@
                 </a>
             </div>
 
+            <!--Kumon-->
             <div class="exp-institution-flex f2">
                 <h3 style="min-width: 250px;"><b>Kumon North America</b><br><i style="font-size: .8em;"><br>Mira Loma, CA<br>August 2016 - August 2017</i></h3>
                 <div class="exp-institution-info-flex f2">
@@ -119,6 +125,46 @@
             </div>
         </section>
 
+        <!--Projects-->
+        <section class="flex-proj tag f" id = "proj">
+            <h2>Projects</h2>
+
+            <!--Formula 1-->
+            <div class="f1 f2">
+                <h3>Formula 1 Standings Predictions</h3>
+                <div>
+                    <p class="f3">Analyzed Championship data sets and applied Linear Regression to Formula 1 Driver standings to predict
+                    future standings using Pandas, NumPy, and MatPlotLib implemented in a Jupyter Notebook.
+                    </p>
+                    <a href="https://github.com/jshinde842/Formula-1-Standings-Predictions">Link to Project</a>
+                </div>
+            </div>
+
+            <!--Huffman-->
+            <div class="huffman f2">
+                <h3>Huffman Coding</h3>
+                <div>
+                    <p class="f3">Lossless file compression tool using the Huffman algorithm through an implementation of the Huffman
+                    Coding Tree using data structures. Tool allows for lossless compression and decompression of files containing strings that are converted to/from
+                    ASCII values and encoded/decoded.
+                    </p>
+                    <a href="https://gitfront.io/r/user-7039462/JN8WUk319n58/Huffman-Coding/">Link to Project</a>
+                </div>
+            </div>
+
+            <!--Traffic Lights-->
+            <div class="traffic f2">
+                <h3>Traffic Lights</h3>
+                <div>
+                    <p class="f3">Traffic Controller implementation that simulates a 20-state intersection that gauges traffic to control the traffic
+                        lights. 6-Way intersection flow modeled using sequential and combinational logic.
+                    </p>
+                    <a href="https://github.com/jshinde842/Traffic-Lights">Link to Project</a>
+                </div>
+            </div>
+        </section>
+
+        <!--Skills-->
         <section class="skills-flex tag f" id = "skills">
             <h2>Skills</h2>
             <div class="skills-noncert-flex f2">
@@ -150,38 +196,6 @@
                             <a id="certlink" href="https://verify.openedg.org/?id=bK8q.p67m.whtD">Verify Certificate</a>
                         </div>
                     </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="flex-proj tag f" id = "proj">
-            <h2>Projects</h2>
-            <div class="f1 f2">
-                <h3>Formula 1 Standings Predictions</h3>
-                <div>
-                    <p class="f3">Analyzed Championship data sets and applied Linear Regression to Formula 1 Driver standings to predict
-                    future standings using Pandas, NumPy, and MatPlotLib implemented in a Jupyter Notebook.
-                    </p>
-                    <a href="https://github.com/jshinde842/Formula-1-Standings-Predictions">Link to Project</a>
-                </div>
-            </div>
-            <div class="huffman f2">
-                <h3>Huffman Coding</h3>
-                <div>
-                    <p class="f3">Lossless file compression tool using the Huffman algorithm through an implementation of the Huffman
-                    Coding Tree using data structures. Tool allows for lossless compression and decompression of files containing strings that are converted to/from
-                    ASCII values and encoded/decoded.
-                    </p>
-                    <a href="https://gitfront.io/r/user-7039462/JN8WUk319n58/Huffman-Coding/">Link to Project</a>
-                </div>
-            </div>
-            <div class="traffic f2">
-                <h3>Traffic Lights</h3>
-                <div>
-                    <p class="f3">Traffic Controller implementation that simulates a 20-state intersection that gauges traffic to control the traffic
-                        lights. 6-Way intersection flow modeled using sequential and combinational logic.
-                    </p>
-                    <a href="https://github.com/jshinde842/Traffic-Lights">Link to Project</a>
                 </div>
             </div>
         </section>
