--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script type="text/javascript" src="main.js"></script>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <title>Jay Shinde's Portfolio</title>
     <meta name="Jay Shinde's Portfolio" content="Overview">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <script type="text/javascript" src="main.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script> 
 </head>
 
 <body> 
     <header>
         <nav>
+            <!--Default NavBar-->
             <h1><a href="/index.html">Jay Shinde</a></h1>
             <ul class="navigation">
                 <li><a href="/index.html#about" class="nav-link">About Me</a></li>
@@ -25,6 +26,8 @@
                 <li><a href="/index.html#skills" class="nav-link">Skills</a></li>
                 <li><a href="/contact.html" class="nav-link">Contact</a></li>
             </ul>
+
+            <!--Mobile-->
             <ul class="navigation2">
                 <li><a href="/contact.html" class="nav-link">Contact</a></li>
             </ul>
@@ -34,7 +37,11 @@
     <main>
         <!--About Me-->
         <section class="aboutme-flex" id="about">
+
+            <!--About Me Portrait-->
             <img src="/images/portrait.jpg" alt="Jay Shinde, Portrait" class="aboutme-portrait">
+
+            <!--About Me Info-->
             <div class="aboutme-text-flex f">
                 <h2>About Me</h2>
                 <p>I am an aspiring Software Engineer with interests in Application Development, Mathematics, FinTech, and Data Science. I eagerly seek growth through the cultivation of my skills and learning new technologies.
@@ -60,6 +67,8 @@
         <!--Education-->
         <section class="edu-flex tag f" id="edu">
             <h2>Education</h2>
+
+            <!--UCSD-->
             <div class="edu-ucsd-flex f2">
                 <h3 style="min-width: 250px;"><b>University of California,<br>San Diego</b><br><i style="font-size: .8em;"><br>September 2018 - July 2022</i></h3>
                 <div>
