--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
         </section>
 
         <!--Projects-->
-        <section class="flex-proj tag f" id = "proj">
+        <section class="proj-flex tag f" id = "proj">
             <h2>Projects</h2>
 
             <!--Formula 1-->
-            <div class="f1 f2">
+            <div class="proj-project-flex f2">
                 <h3>Formula 1 Standings Predictions</h3>
                 <div>
                     <p class="f3">Analyzed Championship data sets and applied Linear Regression to Formula 1 Driver standings to predict
@@ -150,7 +150,7 @@
             </div>
 
             <!--Huffman-->
-            <div class="huffman f2">
+            <div class="proj-project-flex f2">
                 <h3>Huffman Coding</h3>
                 <div>
                     <p class="f3">Lossless file compression tool using the Huffman algorithm through an implementation of the Huffman
@@ -162,7 +162,7 @@
             </div>
 
             <!--Traffic Lights-->
-            <div class="traffic f2">
+            <div class="proj-project-flex f2">
                 <h3>Traffic Lights</h3>
                 <div>
                     <p class="f3">Traffic Controller implementation that simulates a 20-state intersection that gauges traffic to control the traffic
