--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
             <!--Formula 1-->
             <div class="proj-project-flex f2">
-                <h3>Formula 1 Standings Predictions</h3>
+                <h3 style="min-width: 250px;">Formula 1 Standings Predictions</h3>
                 <div>
                     <p class="f3">Analyzed Championship data sets and applied Linear Regression to Formula 1 Driver standings to predict
                     future standings using Pandas, NumPy, and MatPlotLib implemented in a Jupyter Notebook.
@@ -151,7 +151,7 @@
 
             <!--Huffman-->
             <div class="proj-project-flex f2">
-                <h3>Huffman Coding</h3>
+                <h3 style="min-width: 250px;">Huffman Coding</h3>
                 <div>
                     <p class="f3">Lossless file compression tool using the Huffman algorithm through an implementation of the Huffman
                     Coding Tree using data structures. Tool allows for lossless compression and decompression of files containing strings that are converted to/from
@@ -163,7 +163,7 @@
 
             <!--Traffic Lights-->
             <div class="proj-project-flex f2">
-                <h3>Traffic Lights</h3>
+                <h3 style="min-width: 250px;">Traffic Lights</h3>
                 <div>
                     <p class="f3">Traffic Controller implementation that simulates a 20-state intersection that gauges traffic to control the traffic
                         lights. 6-Way intersection flow modeled using sequential and combinational logic.
