--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <h2>Education</h2>
 
             <!--UCSD-->
-            <div class="edu-ucsd-flex f2">
+            <div class="edu-institution-flex f2">
                 <h3 style="min-width: 250px;"><b>University of California,<br>San Diego</b><br><i style="font-size: .8em;"><br>September 2018 - July 2022</i></h3>
                 <div>
                     <p><i>Mathematics-Computer Science B.S.</i></p>
@@ -145,7 +145,6 @@
                     <p class="f3">Analyzed Championship data sets and applied Linear Regression to Formula 1 Driver standings to predict
                     future standings using Pandas, NumPy, and MatPlotLib implemented in a Jupyter Notebook.
                     </p>
-                    <a href="https://github.com/jshinde842/Formula-1-Standings-Predictions">Link to Project</a>
                 </div>
             </div>
 
@@ -157,7 +156,6 @@
                     Coding Tree using data structures. Tool allows for lossless compression and decompression of files containing strings that are converted to/from
                     ASCII values and encoded/decoded.
                     </p>
-                    <a href="https://gitfront.io/r/user-7039462/JN8WUk319n58/Huffman-Coding/">Link to Project</a>
                 </div>
             </div>
 
@@ -168,7 +166,6 @@
                     <p class="f3">Traffic Controller implementation that simulates a 20-state intersection that gauges traffic to control the traffic
                         lights. 6-Way intersection flow modeled using sequential and combinational logic.
                     </p>
-                    <a href="https://github.com/jshinde842/Traffic-Lights">Link to Project</a>
                 </div>
             </div>
         </section>
