--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
                     future standings using Pandas, NumPy, and MatPlotLib implemented in a Jupyter Notebook.
                     </p>
                 </div>
+                <button class="btn yellowBtn" onclick="window.location.href='https://jayshinde.dev/more-about-me.html';">
+                    <span>More About Me</span>
+                </button>
             </div>
 
             <!--Huffman-->
