--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     future standings using Pandas, NumPy, and MatPlotLib implemented in a Jupyter Notebook.
                     </p>
                 </div>
-                <button class="btn yellowBtn" onclick="window.location.href='https://jayshinde.dev/more-about-me.html';">
+                <button class="btn yellowBtn" style="min-width: 150px;" window.location.href='https://jayshinde.dev/more-about-me.html';">
                     <span>More About Me</span>
                 </button>
             </div>
