--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
                     future standings using Pandas, NumPy, and MatPlotLib implemented in a Jupyter Notebook.
                     </p>
                 </div>
-                <button class="btn yellowBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-end;" window.location.href='https://jayshinde.dev/more-about-me.html';">
-                    <span>More About Me</span>
+                <button class="btn yellowBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="window.location.href='https://jayshinde.dev/more-about-me.html';">
+                    <span>More Info</span>
                 </button>
             </div>
 
