--- a/index.html
+++ b/index.html
@@ -160,6 +160,9 @@
                     ASCII values and encoded/decoded.
                     </p>
                 </div>
+                <button class="btn yellowBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="window.location.href='https://jayshinde.dev/more-about-me.html';">
+                    <span>More Info</span>
+                </button>
             </div>
 
             <!--Traffic Lights-->
@@ -170,6 +173,9 @@
                         lights. 6-Way intersection flow modeled using sequential and combinational logic.
                     </p>
                 </div>
+                <button class="btn yellowBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="window.location.href='https://jayshinde.dev/more-about-me.html';">
+                    <span>More Info</span>
+                </button>
             </div>
         </section>
 
