--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     </p>
                 </div>
                 <button class="btn yellowBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="window.location.href='https://jayshinde.dev/more-about-me.html';">
-                    <span>More Info</span>
+                    <span>Project Details</span>
                 </button>
             </div>
 
@@ -161,7 +161,7 @@
                     </p>
                 </div>
                 <button class="btn yellowBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="window.location.href='https://jayshinde.dev/more-about-me.html';">
-                    <span>More Info</span>
+                    <span>Project Details</span>
                 </button>
             </div>
 
@@ -174,7 +174,7 @@
                     </p>
                 </div>
                 <button class="btn yellowBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="window.location.href='https://jayshinde.dev/more-about-me.html';">
-                    <span>More Info</span>
+                    <span>Project Details</span>
                 </button>
             </div>
         </section>
