--- a/index.html
+++ b/index.html
@@ -138,6 +138,18 @@
         <section class="proj-flex tag f" id = "proj">
             <h2>Projects</h2>
 
+            <!--Budgeting Calculator-->
+            <div class="proj-project-flex f2">
+                <h3 style="min-width: 250px;">Budgeting Calculator</h3>
+                <div>
+                    <p class="f3">Placeholder Text
+                    </p>
+                </div>
+                <button class="btn yellowBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="window.location.href='https://jayshinde.dev/budgetcalc.html';">
+                    <span>Project Details</span>
+                </button>
+            </div>
+
             <!--Formula 1-->
             <div class="proj-project-flex f2">
                 <h3 style="min-width: 250px;">Formula 1 Standings Predictions</h3>
@@ -146,7 +158,7 @@
                     future standings using Pandas, NumPy, and MatPlotLib implemented in a Jupyter Notebook.
                     </p>
                 </div>
-                <button class="btn yellowBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="window.location.href='https://jayshinde.dev/more-about-me.html';">
+                <button class="btn yellowBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="window.location.href='https://jayshinde.dev/f1pred.html';">
                     <span>Project Details</span>
                 </button>
             </div>
@@ -160,7 +172,7 @@
                     ASCII values and encoded/decoded.
                     </p>
                 </div>
-                <button class="btn yellowBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="window.location.href='https://jayshinde.dev/more-about-me.html';">
+                <button class="btn yellowBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="window.location.href='https://jayshinde.dev/huffman.html';">
                     <span>Project Details</span>
                 </button>
             </div>
@@ -173,7 +185,7 @@
                         lights. 6-Way intersection flow modeled using sequential and combinational logic.
                     </p>
                 </div>
-                <button class="btn yellowBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="window.location.href='https://jayshinde.dev/more-about-me.html';">
+                <button class="btn yellowBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="window.location.href='https://jayshinde.dev/trafficlights.html';">
                     <span>Project Details</span>
                 </button>
             </div>
