--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div class="proj-project-flex f2">
                 <h3 style="min-width: 250px;">Budgeting Calculator</h3>
                 <div>
-                    <p class="f3">Placeholder Text
+                    <p class="f3">Placeholder Text Placeholder Text Placeholder Text Placeholder Text Placeholder Text Placeholder Text Placeholder Text 
                     </p>
                 </div>
                 <button class="btn yellowBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="window.location.href='https://jayshinde.dev/budgetcalc.html';">
