removed skills for now

--- a/index.html
+++ b/index.html
@@ -192,39 +192,8 @@
         </section>
 
         <!--Skills-->
-        <section class="skills-flex tag f" id = "skills">
-            <h2>Skills</h2>
-            <div class="skills-noncert-flex f2">
-                <div class="skills-noncert-tech">
-                    <h3>Technical Skills</h3>
-                    <ul>
-                        <li>Python: SciPy, Numpy, Pandas</li>
-                        <li>C++</li>
-                        <li>Data Structres</li>
-                        <li>Algorithms & Algorithm Analysis</li>
-                    </ul>
-                </div>
-                <div class="skills-noncert-soft">
-                    <h3>Soft Skills</h3>
-                    <ul>
-                        <li>Communication</li>
-                        <li>Eager to learn</li>
-                        <li>Interpersonal Skills</li>
-                        <li>Problem-Solving</li>
-                        <li>Growth Mindset</li>
-                    </ul>
-                </div>
-                <div class="skills-noncert-cert">
-                    <h3>Certifications</h3>
-                    <div class="skills-noncert-cert-pcep">
-                        <h3>PCEP<br><i style="font-size: .8em;">Certified Entry-Level Python Programmer</i></h3>
-                        <div class="skills-noncert-cert-pcep-link">
-                            <p>Recieved: April 2022</p>
-                            <a id="certlink" href="https://verify.openedg.org/?id=bK8q.p67m.whtD">Verify Certificate</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <section>
+            
         </section>
     </main>
 
