back to top button

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head id="top">
     <title>Jay Shinde's Portfolio</title>
     <meta name="Jay Shinde's Portfolio" content="Overview">
     <link rel="stylesheet" href="styles.css">
@@ -193,8 +193,12 @@
 
         <!--Skills-->
         <section>
-            
+
         </section>
+
+        <button class="btn blueBtn" onclick="window.location.href='/index.html#about';">
+            <span>Back to Top</span>
+        </button>
     </main>
 
     <footer>
