--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
         </section>
 
-        <button class="btn blueBtn" onclick="window.location.href='/index.html#about';">
+        <button class="btn topBtn" onclick="window.location.href='/index.html#about';">
             <span>Back to Top</span>
         </button>
     </main>
