back to top button

--- a/index.html
+++ b/index.html
@@ -196,9 +196,11 @@
 
         </section>
 
-        <button class="btn topBtn" onclick="window.location.href='/index.html#about';">
-            <span>Back to Top</span>
-        </button>
+        <div style="text-align: center;">
+            <button class="btn topBtn" onclick="window.location.href='/index.html';">
+                <span>Back to Top</span>
+            </button>
+        </div>
     </main>
 
     <footer>
