back to top button

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head id="top">
+<head>
     <title>Jay Shinde's Portfolio</title>
     <meta name="Jay Shinde's Portfolio" content="Overview">
     <link rel="stylesheet" href="styles.css">
@@ -14,7 +14,7 @@
 </head>
 
 <body> 
-    <header>
+    <header id="top">
         <nav>
             <!--Default NavBar-->
             <h1><a href="/index.html">Jay Shinde</a></h1>
@@ -197,7 +197,7 @@
         </section>
 
         <div style="text-align: center;">
-            <button class="btn topBtn" onclick="window.location.href='/index.html';">
+            <button class="btn topBtn" onclick="window.location.href='#top;'">
                 <span>Back to Top</span>
             </button>
         </div>
