back to top button

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         </section>
 
         <div style="text-align: center;">
-            <button class="btn topBtn" onclick="window.location.href='#top;'">
+            <button class="btn topBtn" onclick="window.location.href='/index.html#top;'">
                 <span>Back to Top</span>
             </button>
         </div>
