back to top button

--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
         </section>
 
         <div style="text-align: center;">
-            <button class="btn topBtn" href='/index.html#top;'>
-                <span>Back to Top</span>
+            <button class="btn topBtn">
+                <span href="/index.html#top">Back to Top</span>
             </button>
         </div>
     </main>
