--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         </section>
 
         <div style="text-align: center;">
-            <button class="btn topBtn">
+            <button class="btn topBtn" onclick="window.location.href='/index.html'">
                 <span href="/index.html#top">Back to Top</span>
             </button>
         </div>
