set load to top

--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
         </section>
 
         <div style="text-align: center;">
-            <button class="btn topBtn" onclick="window.location.href='/index.html'">
-                <span href="/index.html#top">Back to Top</span>
+            <button class="btn topBtn" onclick="window.scrollTo({top: 0})">
+                <span>Back to Top</span>
             </button>
         </div>
     </main>
