--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <!--Default NavBar-->
             <h1><a href="/index.html">Jay Shinde</a></h1>
             <ul class="navigation">
-                <li><a href="/index.html#about" class="nav-link">About Me</a></li>
+                <li><a href="#about" class="nav-link">About Me</a></li>
                 <li><a href="/index.html#edu" class="nav-link">Education</a></li>
                 <li><a href="/index.html#exp" class="nav-link">Experience</a></li>
                 <li><a href="/index.html#proj" class="nav-link">Projects</a></li>
