--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body> 
-    <header id="top">
+    <header id="home">
         <nav>
             <!--Default NavBar-->
             <h1><a href="/index.html">Jay Shinde</a></h1>
