--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><a href="#exp" class="nav-link">Experience</a></li>
                 <li><a href="#proj" class="nav-link">Projects</a></li>
                 <li><a href="#skills" class="nav-link">Skills</a></li>
-                <li><a href="/contact.html" class="nav-link">Contact</a></li>
+                <li><a href="/contact.html" class="nav-link" id="disabled">Contact</a></li>
             </ul>
 
             <!--Mobile-->
