--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <ion-icon name="logo-github"></ion-icon>
                     </a>
                 </div>
-                <button class="btn blueBtn" id="disabled"> <!--onclick="window.location.href='https://jayshinde.dev/more-about-me.html';"-->
+                <button class="btn blueBtn" onclick="pageDisabledAlert()"> <!--onclick="window.location.href='https://jayshinde.dev/more-about-me.html';"-->
                     <span>More About Me</span>
                 </button>
             </div>
