--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
                 <li><a href="#exp" class="nav-link">Experience</a></li>
                 <li><a href="#proj" class="nav-link">Projects</a></li>
                 <li><a href="#skills" class="nav-link">Skills</a></li>
-                <li><a href="/contact.html" class="nav-link">Contact</a></li>
+                <!--<li><a href="/contact.html" class="nav-link">Contact</a></li>-->
             </ul>
 
             <!--Mobile-->
             <ul class="navigation2">
-                <li><a href="/contact.html" class="nav-link">Contact</a></li>
+                <!--<li><a href="/contact.html" class="nav-link">Contact</a></li>-->
             </ul>
         </nav>
     </header>
