--- a/index.html
+++ b/index.html
@@ -203,8 +203,10 @@
         </div>
     </main>
 
-    <footer>
-
+    <footer >
+        <div style="text-align: center;">
+            &copy; Copyright 2022 Jay Shinde
+        </div>
     </footer>
 </body>
 </html>
