--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     </main>
 
     <footer >
-        <div style="text-align: center;">
+        <div style="text-align: center; color: var(--bg-color2)">
             &copy; Copyright 2022 Jay Shinde
         </div>
     </footer>
