image scale down

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     </p>
                 </div>
                 <a class="institution-logo" href="https://ucsd.edu" target="_blank">
-                    <img src="images/UCSD_Seal.png" alt="UCSD Logo" style="width:128px;height:128px;">
+                    <img src="images/ucsdLogo.png" alt="UCSD Logo" style="width:128px;height:128px;">
                 </a>
             </div>
         </section>
@@ -103,7 +103,7 @@
                     </p>
                 </div>
                 <a class="institution-logo" href="https://www.veritystream.com" target="_blank">
-                    <img src="images/veritystream_icon_color.png" alt="VerityStream Logo" style="width:100px;height:auto;">
+                    <img src="images/veritystreamLogo.png" alt="VerityStream Logo" style="width:100px;height:auto;">
                 </a>
             </div>
 
@@ -116,7 +116,7 @@
                     </p>
                 </div>
                 <a class="institution-logo" href="https://www.nestlecafe.com" target="_blank">
-                    <img src="images/nestle-toll-house-logo-8B7AB7BC66-seeklogo.com.png" alt="Nestle Logo" style="width:100px;height:auto;">
+                    <img src="images/nestleLogo.png" alt="Nestle Logo" style="width:100px;height:auto;">
                 </a>
             </div>
 
@@ -129,7 +129,7 @@
                     </p>
                 </div>
                 <a class="institution-logo" href="https://www.kumon.com" target="_blank">
-                    <img src="images/kumon-north-america-squarelogo.png" alt="Kumon Logo" style="width:100px;height:auto;">
+                    <img src="images/kumonLogo.png" alt="Kumon Logo" style="width:100px;height:auto;">
                 </a>
             </div>
         </section>
