--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <img src="/images/portrait.jpg" alt="Jay Shinde, Portrait" class="aboutme-portrait">
 
             <!--About Me Info-->
-            <div class="aboutme-text-flex f">
+            <div class="aboutme-text-flex f box">
                 <h2>About Me</h2>
                 <p>I am an aspiring Software Engineer with interests in Application Development, Mathematics, FinTech, and Data Science. I eagerly seek growth through the cultivation of my skills and learning new technologies.
                     <br><br>
@@ -65,7 +65,7 @@
         </section>
 
         <!--Education-->
-        <section class="edu-flex tag f" id="edu">
+        <section class="edu-flex tag f box" id="edu">
             <h2>Education</h2>
 
             <!--UCSD-->
@@ -86,7 +86,7 @@
         </section>
 
         <!--Experience-->
-        <section class="exp-flex tag f" id="exp">
+        <section class="exp-flex tag f box" id="exp">
             <h2>Experience</h2>
             <!--VerityStream-->
             <div class="exp-institution-flex f2">
@@ -135,7 +135,7 @@
         </section>
 
         <!--Projects-->
-        <section class="proj-flex tag f" id = "proj">
+        <section class="proj-flex tag f box" id = "proj">
             <h2>Projects</h2>
 
             <!--Budgeting Calculator-->
@@ -203,7 +203,7 @@
         </div>
     </main>
 
-    <footer >
+    <footer>
         <div style="text-align: center; color: var(--bg-color2)">
             &copy; Copyright 2022 Jay Shinde
         </div>
