--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     future standings using Pandas, NumPy, and MatPlotLib implemented in a Jupyter Notebook.
                     </p>
                 </div>
-                <button class="btn yellowBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="pageDisabledAlert()"> <!--onclick="window.location.href='https://jayshinde.dev/f1pred.html';"-->
+                <button class="btn blueBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="pageDisabledAlert()"> <!--onclick="window.location.href='https://jayshinde.dev/f1pred.html';"-->
                     <span>Project Details</span>
                 </button>
             </div>
@@ -172,7 +172,7 @@
                     ASCII values and encoded/decoded.
                     </p>
                 </div>
-                <button class="btn yellowBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="pageDisabledAlert()"> <!--onclick="window.location.href='https://jayshinde.dev/huffman.html';"-->
+                <button class="btn blueBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="pageDisabledAlert()"> <!--onclick="window.location.href='https://jayshinde.dev/huffman.html';"-->
                     <span>Project Details</span>
                 </button>
             </div>
@@ -185,7 +185,7 @@
                         lights. 6-Way intersection flow modeled using sequential and combinational logic.
                     </p>
                 </div>
-                <button class="btn yellowBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="pageDisabledAlert()"> <!--onclick="window.location.href='https://jayshinde.dev/trafficlights.html';"-->
+                <button class="btn blueBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="pageDisabledAlert()"> <!--onclick="window.location.href='https://jayshinde.dev/trafficlights.html';"-->
                     <span>Project Details</span>
                 </button>
             </div>
