--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <p class="f3">I made this script to help me and possibly you to budget your finances a little better using the 50/30/20 Rule. This tool uses 2022 Tax Information and includes factors in calculation of any 401(k) contributions the user may have in providing the resulting budget allowances.
                     </p>
                 </div>
-                <button class="btn yellowBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="pageDisabledAlert()"> <!--onclick="window.location.href='https://jayshinde.dev/budgetcalc.html';"-->
+                <button class="btn blueBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="pageDisabledAlert()"> <!--onclick="window.location.href='https://jayshinde.dev/budgetcalc.html';"-->
                     <span>Project Details</span>
                 </button>
             </div>
