--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script> 
 </head>
 
-<body style="max-width: 1000px;"> 
-    <header id="home">
+<body> 
+    <header id="home responsive">
         <nav>
             <!--Default NavBar-->
             <h1><a href="/index.html">Jay Shinde</a></h1>
