width of site large res

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script> 
 </head>
 
-<body style="margin: 0 auto;"> 
+<body> 
     <header id="home responsive">
         <nav>
             <!--Default NavBar-->
