--- a/contact.html
+++ b/contact.html
@@ -19,11 +19,11 @@
             <!--Default NavBar-->
             <h1><a href="/index.html">Jay Shinde</a></h1>
             <ul class="navigation">
-                <li><a href="#about" class="nav-link">About Me</a></li>
-                <li><a href="#edu" class="nav-link">Education</a></li>
-                <li><a href="#exp" class="nav-link">Experience</a></li>
-                <li><a href="#proj" class="nav-link">Projects</a></li>
-                <li><a href="#skills" class="nav-link">Skills</a></li>
+                <li><a href="/index.html#about" class="nav-link">About Me</a></li>
+                <li><a href="/index.html#edu" class="nav-link">Education</a></li>
+                <li><a href="/index.html#exp" class="nav-link">Experience</a></li>
+                <li><a href="#/index.html#proj" class="nav-link">Projects</a></li>
+                <li><a href="/index.html#skills" class="nav-link">Skills</a></li>
                 <!--<li><a href="/contact.html" class="nav-link">Contact</a></li>-->
             </ul>
 
@@ -36,7 +36,7 @@
 
     <main>
 
-        
+
 
         <div style="text-align: center;">
             <button class="btn topBtn" onclick="window.scrollTo({top: 0})">
