--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="/index.html#about" class="nav-link">About Me</a></li>
                 <li><a href="/index.html#edu" class="nav-link">Education</a></li>
                 <li><a href="/index.html#exp" class="nav-link">Experience</a></li>
-                <li><a href="#/index.htmlproj" class="nav-link">Projects</a></li>
+                <li><a href="#/index.html#proj" class="nav-link">Projects</a></li>
                 <li><a href="/index.html#skills" class="nav-link">Skills</a></li>
                 <!--<li><a href="/contact.html" class="nav-link">Contact</a></li>-->
             </ul>
