--- a/project.html
+++ b/project.html
@@ -38,22 +38,14 @@
 
         <!--Bulk Project Section-->
         <section class="edu-flex tag f box" id="edu">
-            <h2>Education</h2>
+            <h2>Formula 1 Standings Predictions</h2>
 
             <!--UCSD-->
-            <div class="edu-institution-flex f2">
-                <h3 style="min-width: 250px;"><b>University of California,<br>San Diego</b><br><i style="font-size: .8em;"><br>September 2018 - July 2022</i></h3>
-                <div>
-                    <p><i>Mathematics-Computer Science B.S.</i></p>
-                    <p class="f3">As a student at UCSD engaged in challenging curriculum in both Mathematics and Computer Science, I have had the opportunity
-                        to take technical classes that are often interweaved with each other.  <br>&nbsp;<br>
-                        Relevant Courses: Advanced Data Strutures, Systems Programming, Design and Analysis of Algorithms
-                        , Components and Design Techniques for Digital Systems, Software Engineering, Discrete Mathematics and Graph Theory, Numerical Analysis: Linear Algebra & Approximation & Nonlinear Equations, and Statistical Methods.
-                    </p>
-                </div>
-                <a class="institution-logo" href="https://ucsd.edu" target="_blank">
-                    <img src="images/ucsdLogo.png" alt="UCSD Logo" style="width:128px;height:128px;">
-                </a>
+            <div class="f2">
+                <h3>Tech Stack: Jupyter Notebook, Python, Julia, NumPy, Pandas, MatPlotLib, SciKit-Learn</h3>>
+                <p>
+                    Placeholder project information
+                </p>
             </div>
         </section>
 
