--- a/project.html
+++ b/project.html
@@ -37,15 +37,18 @@
     <main>
 
         <!--Bulk Project Section-->
-        <section class="edu-flex tag f box" id="edu">
+        <section class="project-flex tag f box">
             <h2>Formula 1 Standings Predictions</h2>
 
-            <!--UCSD-->
+            <!--Project Info-->
             <div class="f2">
-                <h3>Tech Stack: Jupyter Notebook, Python, Julia, NumPy, Pandas, MatPlotLib, SciKit-Learn</h3>>
+                <h3>Tech Stack: Jupyter Notebook, Python, Julia, NumPy, Pandas, MatPlotLib, SciKit-Learn</h3>
                 <p>
                     Placeholder project information
                 </p>
+                <button class="btn blueBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="window.location.href='https://github.com/jshinde842/Formula-1-Standings-Predictions';">
+                    <span>Repository</span>
+                </button>
             </div>
         </section>
 
