--- a/project.html
+++ b/project.html
@@ -46,7 +46,7 @@
                 <p>
                     Placeholder project information
                 </p>
-                <button class="btn blueBtn" target="_blank" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="window.location.href='https://github.com/jshinde842/Formula-1-Standings-Predictions';">
+                <button class="btn blueBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="window.open='https://github.com/jshinde842/Formula-1-Standings-Predictions';">
                     <span>Repository</span>
                 </button>
             </div>
