--- a/project.html
+++ b/project.html
@@ -46,7 +46,7 @@
                 <p>
                     Placeholder project information
                 </p>
-                <button class="btn blueBtn" id="f1repo" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;">
+                <button class="btn blueBtn" id="f1repo" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="window.open('https://github.com/jshinde842/Formula-1-Standings-Predictions', '_blank')">
                     <span>Repository</span>
                 </button>
             </div>
