--- a/project.html
+++ b/project.html
@@ -35,7 +35,9 @@
     </header>
 
     <main>
-
+        <button class="btn blueBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="window.location.href('https://jayshinde.dev/#proj')">
+            <span>Back to Projects</span>
+        </button>
         <!--Bulk Project Section-->
         <section class="project-flex tag f box">
             <h2>Formula 1 Standings Predictions</h2>
