--- a/project.html
+++ b/project.html
@@ -35,7 +35,7 @@
     </header>
 
     <main>
-        <button class="btn blueBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="window.location.href('https://jayshinde.dev/#proj')">
+        <button type="button" class="btn blueBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="location.href='https://jayshinde.dev/#proj'">
             <span>Back to Projects</span>
         </button>
         <!--Bulk Project Section-->
