--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     future standings using Pandas, NumPy, and MatPlotLib implemented in a Jupyter Notebook.
                     </p>
                 </div>
-                <button class="btn blueBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="pageDisabledAlert()"> <!--onclick="window.location.href='https://jayshinde.dev/f1pred.html';"-->
+                <button class="btn blueBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="location.href='https://jayshinde.dev/project-formula1.html';"> <!--onclick="pageDisabledAlert()"-->
                     <span>Project Details</span>
                 </button>
             </div>
