--- a/project-formula1.html
+++ b/project-formula1.html
@@ -48,8 +48,8 @@
                 <p>
                     Placeholder project information
                 </p>
-                <button class="btn blueBtn" id="f1repo" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="window.open('https://github.com/jshinde842/Formula-1-Standings-Predictions', '_blank')">
-                    <span>Repository</span>
+                <button class="btn topBtn" id="f1repo" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="window.open('https://github.com/jshinde842/Formula-1-Standings-Predictions', '_blank')">
+                    &larr;<span>Repository</span>
                 </button>
             </div>
         </section>
