--- a/project-formula1.html
+++ b/project-formula1.html
@@ -35,7 +35,7 @@
     </header>
 
     <main>
-        <button type="button" class="btn topBtn" style="min-width: 170px;" onclick="location.href='https://jayshinde.dev/#proj'">
+        <button type="button" class="btn topBtn" style="min-width: 170px;margin-left: 3em;margin-top: 2em;" onclick="location.href='https://jayshinde.dev/#proj'">
             <span>&larr; Back to Projects</span>
         </button>
         <!--Bulk Project Section-->
