--- a/project-formula1.html
+++ b/project-formula1.html
@@ -42,15 +42,16 @@
         <section class="project-flex tag f box">
             <h2>Formula 1 Standings Predictions</h2>
 
+            <button class="btn blueBtn" id="f1repo" style="min-width: 150px;margin-top: 1.5em;align-self: center;justify-self: center;" onclick="window.open('https://github.com/jshinde842/Formula-1-Standings-Predictions', '_blank')">
+                <span>Repository</span>
+            </button>
+
             <!--Project Info-->
             <div class="f2">
                 <h3>Tech Stack: Jupyter Notebook, Python, Julia, NumPy, Pandas, MatPlotLib, SciKit-Learn</h3>
                 <p>
                     Placeholder project information
                 </p>
-                <button class="btn blueBtn" id="f1repo" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="window.open('https://github.com/jshinde842/Formula-1-Standings-Predictions', '_blank')">
-                    <span>Repository</span>
-                </button>
             </div>
         </section>
 
