--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </a>
                 </div>
                 <button class="btn blueBtn" onclick="pageDisabledAlert()"> <!--onclick="window.location.href='https://jayshinde.dev/more-about-me.html';"-->
-                    <span>More About Me</span>
+                    <span>More About Me &rarr;</span>
                 </button>
             </div>
         </section>
@@ -145,7 +145,7 @@
                     </p>
                 </div>
                 <button class="btn blueBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="pageDisabledAlert()"> <!--onclick="window.location.href='https://jayshinde.dev/budgetcalc.html';"-->
-                    <span>Project Details</span>
+                    <span>Project Details &rarr;</span>
                 </button>
             </div>
 
@@ -158,7 +158,7 @@
                     </p>
                 </div>
                 <button class="btn blueBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="location.href='https://jayshinde.dev/project-formula1.html';"> <!--onclick="pageDisabledAlert()"-->
-                    <span>Project Details</span>
+                    <span>Project Details &rarr;</span>
                 </button>
             </div>
 
@@ -172,7 +172,7 @@
                     </p>
                 </div>
                 <button class="btn blueBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="pageDisabledAlert()"> <!--onclick="window.location.href='https://jayshinde.dev/huffman.html';"-->
-                    <span>Project Details</span>
+                    <span>Project Details &rarr;</span>
                 </button>
             </div>
 
@@ -185,7 +185,7 @@
                     </p>
                 </div>
                 <button class="btn blueBtn" style="min-width: 150px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="pageDisabledAlert()"> <!--onclick="window.location.href='https://jayshinde.dev/trafficlights.html';"-->
-                    <span>Project Details</span>
+                    <span>Project Details &rarr;</span>
                 </button>
             </div>
         </section>
