--- a/project-formula1.html
+++ b/project-formula1.html
@@ -42,7 +42,7 @@
         <section class="project-flex tag f box">
             <h2>Formula 1 Standings Predictions</h2>
 
-            <button class="btn blueBtn" id="f1repo" style="min-width: 150px;margin-top: 1.5em;align-self: center;justify-self: center;" onclick="window.open('https://github.com/jshinde842/Formula-1-Standings-Predictions', '_blank')">
+            <button class="btn blueBtn" id="f1repo" style="min-width: 150px;margin-top: 1em;margin-bottom: 1em;align-self: center;justify-self: center;" onclick="window.open('https://github.com/jshinde842/Formula-1-Standings-Predictions', '_blank')">
                 <span>Repository</span>
             </button>
 
