--- a/index.html
+++ b/index.html
@@ -153,8 +153,7 @@
             <div class="proj-project-flex f2">
                 <h3 style="min-width: 250px;">Formula 1 Standings Predictions</h3>
                 <div>
-                    <p class="f3">Analyzed Championship data sets and applied Linear Regression to Formula 1 Driver standings to predict
-                    future standings using Pandas, NumPy, and MatPlotLib implemented in a Jupyter Notebook.
+                    <p class="f3"> Analysis of past Formula 1 Championship driver standings using machine learning to predict future performance of drivers and an exploration in whether or not external bias may affect the model.
                     </p>
                 </div>
                 <button class="btn blueBtn" style="min-width: 180px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="location.href='https://jayshinde.dev/project-formula1.html';"> <!--onclick="pageDisabledAlert()"-->
